--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		
 					<!-- HOME -->
 					<li class="has-submenu">
-						<a href="index-corporate-1.html">INICIO</a>
+						<a href="index.html">INICIO</a>
 						<ul class="submenu">
 							
 						</ul>
@@ -423,7 +423,7 @@
 							</address>
 						</div>
              <div class="inner-brand">
-				      <a class="inner-brand" href="index-corporate-2.html">
+				      <a class="inner-brand" href="index.html">
 					      <img class="brand-dark" src="" width="" alt="">
 				      </a>
 					  </div>
