--- a/contact-2.html
+++ b/contact-2.html
@@ -48,7 +48,7 @@
 		<div class="container">
 			<!-- YOUR LOGO HERE -->
 			<div class="inner-header">
-				<a class="inner-brand" href="index-corporate-1.html">
+				<a class="inner-brand" href="index.html">
 					<img class="brand-light" src="assets/images/xander_gamers logo noranja.png" width="300" alt="">
 					<img class="brand-dark" src="assets/images/xander_gamers logo noranja.png" width="300" alt="">
 				</a>
