--- a/contact-2.html
+++ b/contact-2.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>ETERNAL - CONTACTO</title>
+	<title>CONTACTO</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
