--- a/contact-2.html
+++ b/contact-2.html
@@ -111,7 +111,7 @@
 		
 					<!-- HOME -->
 					<li class="has-submenu">
-						<a href="index-corporate-1.html">INICIO</a>
+						<a href="index.html">INICIO</a>
 						<ul class="submenu">
 							
 						</ul>
