--- a/shop-grid-4-col-intel core.html
+++ b/shop-grid-4-col-intel core.html
@@ -113,7 +113,7 @@
 		
 					<!-- HOME -->
 					<li class="has-submenu">
-						<a href="index-corporate-1.html">INICIO</a>
+						<a href="index.html">INICIO</a>
 						<ul class="submenu">
 							
 						</ul>
