--- a/contact-2.html
+++ b/contact-2.html
@@ -313,7 +313,7 @@
 					<div class="col-sm-12 text-center">         
 						<h1 class="montserrat text-uppercase m-b-10"><a href="#">CONTACTENOS</a></h1>
 						<ol class="breadcrumb text-xs">
-							<li><a href="index-corporate-1.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li class="active">Contactenos</li>
 						</ol>
 
