--- a/shop-grid-4-col-intel core.html
+++ b/shop-grid-4-col-intel core.html
@@ -314,7 +314,7 @@
 
 						<h3 class="montserrat text-uppercase m-b-10">Shop Grid</h3>
 						<ol class="breadcrumb text-xs">
-							<li><a href="#">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="#">Shop</a></li>
 							<li class="active">Shop Grid</li>
 						</ol>
