--- a/shop-grid-4-col-intel core.html
+++ b/shop-grid-4-col-intel core.html
@@ -125,17 +125,15 @@
 						<a href="#">HARDWARE</a>
 						<ul class="submenu">
 							<li class="has-submenu">
-								<a href="#">Procesadores AMD</a>
+								<a href="#">Procesadores INTEL</a>
 								<ul class="submenu">
-									<li><a href="shop-grid-4-col-intel core.html">INTEL CORE</a></li>
-									<li><a href="about-2.html">INTEL PEMTIUM</a></li>
-									<li><a href="about-3.html">INTEL CELERON</a></li>
+									<li><a href="shop-grid-4-col-intel core.html">INTEL GEN 11-12-13</a></li>
 									<li><a href="about-3.html">USADOS</a></li>
 								</ul>
 							</li>
 		
 							<li class="has-submenu">
-								<a href="#">Procesadores INTEL</a>
+								<a href="#">Procesadores AMD</a>
 								<ul class="submenu">
 									<li><a href="services-1.html">RYZEN</a></li>
 									<li><a href="services-2.html">ATHLON</a></li>
@@ -371,7 +369,7 @@
 							</div>
 							<div class="shop-item-title">
 								<h5><a href="#">INTEL CORE I5 11400 2.6GHZ</a></h5>
-								<h5>$890.000</h5>
+								<h5>$600.000</h5>
 							</div>
 						</div>
 					</div>
@@ -381,20 +379,20 @@
 					<div class="col-sm-3 col-md-3 col-lg-3">
 						<div class="shop-item">
 							<div class="shop-item-photo">
-								<a href="#"><img src="assets/images/shop/2.jpg" alt=""></a>
+								<a href="#"><img src="assets/images/shop/INTEL-CORE-12400F.jpg" alt=""></a>
 								<div class="shop-item-tools">
 									<div>
 										<div>
 											<a href="#" title="Add to cart"><i class="icon-basket-loaded icons"></i></a>
-											<a href="#" title="View item"><i class="icon-eye icons"></i></a>
+											<a href="shop-single-product.html" title="View item"><i class="icon-eye icons"></i></a>
 											<a href="#" title="Add to whishlist"><i class="icon-heart icons"></i></a>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="shop-item-title">
-								<h5><a href="#">Knit Sweatshirt</a></h5>
-								<h5>$44.00</h5>
+								<h5><a href="#">INTEL CORE I5 12400F 4.4GHZ</a></h5>
+								<h5>$900.000</h5>
 							</div>
 						</div>
 					</div>
