--- a/index.html
+++ b/index.html
@@ -127,17 +127,15 @@
 						<a href="#">HARDWARE</a>
 						<ul class="submenu">
 							<li class="has-submenu">
-								<a href="#">Procesadores AMD</a>
+								<a href="#">Procesadores INTEL</a>
 								<ul class="submenu">
-									<li><a href="shop-grid-4-col-intel core.html">INTEL CORE</a></li>
-									<li><a href="about-2.html">INTEL PEMTIUM</a></li>
-									<li><a href="about-3.html">INTEL CELERON</a></li>
+									<li><a href="shop-grid-4-col-intel core.html">INTEL GEN 11-12-13</a></li>
 									<li><a href="about-3.html">USADOS</a></li>
 								</ul>
 							</li>
 		
 							<li class="has-submenu">
-								<a href="#">Procesadores INTEL</a>
+								<a href="#">Procesadores AMD</a>
 								<ul class="submenu">
 									<li><a href="services-1.html">RYZEN</a></li>
 									<li><a href="services-2.html">ATHLON</a></li>
