--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
               </form>-->
 
 							<ul class="social-icons social-icons-simple">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.facebook.com/xandersgamerspc/"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.youtube.com/@xandersgamerspc"><i class="fa fa-youtube"></i></a></li>
 							</ul>
 						</div>
 					</div>
